--- a/index.html
+++ b/index.html
@@ -6,9 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        pre {
+            margin: 0;
+        }
+    </style>
 </head>
 
 <body>
+    <p>Lorem ipsum dolor sit.</p>
+    <p>Quidem non reiciendis voluptate.</p>
+    <p>Modi tenetur qui saepe.</p>
+    <p>Error illum autem rerum.</p>
+    <p>Sit fugit esse praesentium.</p>
+    <p>Eligendi nesciunt maiores consequuntur.</p>
+    <p>Obcaecati molestiae odio cupiditate.</p>
+    <p>Recusandae deleniti non porro.</p>
 </body>
 <script src="./script.js"></script>
 
