--- a/index.html
+++ b/index.html
@@ -14,14 +14,12 @@
 </head>
 
 <body>
-    <p>Lorem ipsum dolor sit.</p>
-    <p>Quidem non reiciendis voluptate.</p>
-    <p>Modi tenetur qui saepe.</p>
-    <p>Error illum autem rerum.</p>
-    <p>Sit fugit esse praesentium.</p>
-    <p>Eligendi nesciunt maiores consequuntur.</p>
-    <p>Obcaecati molestiae odio cupiditate.</p>
-    <p>Recusandae deleniti non porro.</p>
+    <div id="root">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptas.</p>
+        <p>Qui ratione optio sint explicabo consequatur magni atque officia eum!</p>
+        <p>Consequuntur illum quod possimus odio saepe nisi nesciunt sapiente quaerat.</p>
+    </div>
+    <a href="">Lorem, ipsum.</a>
 </body>
 <script src="./script.js"></script>
 
