--- a/index.html
+++ b/index.html
@@ -11,25 +11,40 @@
 
 <body>
     <div class="container">
-        <form class="todo__enter">
-            <input type="text" class="text">
-            <button type="submit">Add</button>
-        </form>
-        <div class="todo__out">
-            <!-- <div class="todo__item">
-                <div class="todo__text">
-                    <label>
-                        <input type="checkbox">
-                        <span class="input__text">ToDo text</span>
-                    </label>
-                </div>
-                <div class="buttons">
-                    <button class="edit">Edit ToDo</button>
-                    <button class="remove">Remove ToDo</button>
-                </div>
-            </div> -->
+        <div class="tab">
+            <ul class="tab__buttons">
+                <li class="active">Tab 1</li>
+                <li>Tab 2</li>
+                <li>Tab 3</li>
+                <li>Tab 4</li>
+            </ul>
+            <ul class="tab__content">
+                <li class="active">Lorem ipsum dolor sit amet consectetur adipisicing elit. In vel quae amet officia
+                    deleniti quia hic.
+                    Repellendus, molestias nam! Officiis aspernatur ipsum deleniti ipsam porro facere itaque, odit non
+                    tempora.</li>
+                <li>Delectus accusamus culpa nesciunt similique, aliquid architecto, doloremque totam labore adipisci
+                    cum sunt amet? Saepe possimus ad minus, impedit at explicabo quia non ea. Magni provident eos
+                    obcaecati quos accusamus?</li>
+                <li>Et est ex, molestias vitae, voluptas sapiente sed magni fugiat tempore repellendus commodi
+                    perferendis. Aperiam molestias, eaque cupiditate suscipit necessitatibus ipsum adipisci distinctio
+                    numquam dignissimos ab facere enim quia. Ea.</li>
+                <li>Quis temporibus perspiciatis reprehenderit dignissimos facere accusantium consequatur, iure sequi
+                    esse, numquam quisquam nemo libero debitis sunt commodi ad repudiandae ipsum voluptatem facilis.
+                    Vero repellat distinctio sed, cumque mollitia eius!</li>
+            </ul>
         </div>
-        <button class="clear">Clear ToDo</button>
+    </div>
+
+    <div class="container">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia inventore repellendus consequuntur maxime
+            obcaecati modi sed aliquam deserunt reprehenderit illum nemo officia officiis <span class="tooltip"
+                data-text="Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, perferendis.">unde</span>
+            veritatis quibusdam
+            laboriosam dolorem quaerat, quidem velit expedita nesciunt animi? <span class="tooltip"
+                data-text="Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias itaque excepturi libero magni, iusto nulla.">Quisquam</span>
+            quam odio explicabo culpa ea,
+            blanditiis esse voluptatem, nihil iusto impedit at, excepturi aperiam velit?</p>
     </div>
 </body>
 <script src="./script.js"></script>
