--- a/index.html
+++ b/index.html
@@ -7,57 +7,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./pop-up.css">
 </head>
 
 <body>
     <div class="container">
-        <p>Lorem ipsum dolor sit, <a href="#" data-type="text"
-                data-content="Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium ut aperiam placeat consequatur quasi alias, incidunt vitae nesciunt unde ratione asperiores iste expedita hic at facilis autem! Magnam, suscipit placeat.">amet
-                consectetur</a> adipisicing elit. Excepturi incidunt architecto rerum deserunt ipsum, perferendis saepe
-            aspernatur optio quisquam natus alias nobis praesentium eaque provident ut neque iusto cum quod dolor
-            dolorem nesciunt cupiditate? Deserunt vero minima optio excepturi culpa modi, vitae eaque cum nesciunt nulla
-            natus numquam, assumenda reprehenderit?</p>
-        <p>
-            <a href="https://via.placeholder.com/600" data-type="img">
-                <img src="https://via.placeholder.com/200" alt="#">
-            </a>
-        </p>
-        <p>
-            <a href="#" data-type="content" data-id="feedback">Форма обратной связи</a>
-        </p>
-        <p>
-            <a href="#" data-type="content" data-id="video">
-                Видео
-            </a>
-        </p>
+        <ul class="accordeon">
+            <li>
+                <div class="title">item 1</div>
+                <div class="content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis, aperiam.</div>
+            </li>
+            <li>
+                <div class="title">item 2</div>
+                <div class="content">Cupiditate vel aperiam dolorum reiciendis tempore officiis deleniti quo vitae.
+                </div>
+            </li>
+            <li>
+                <div class="title">item 3</div>
+                <div class="content">Maiores ea itaque debitis nesciunt unde at dolore eius repellat.</div>
+            </li>
+            <li>
+                <div class="title">item 4</div>
+                <div class="content">Ratione ab sit aliquam ut facilis. Rerum eveniet quidem porro.</div>
+            </li>
+            <li>
+                <div class="title">item 5</div>
+                <div class="content">Molestias omnis ducimus tempore aliquam eligendi praesentium? Perspiciatis, aut?
+                    Fugit.</div>
+            </li>
+            <li>
+                <div class="title">item 6</div>
+                <div class="content">Quisquam cupiditate amet ipsum praesentium voluptas sunt magni at consectetur.
+                </div>
+            </li>
+            <li>
+                <div class="title">item 7</div>
+                <div class="content">Animi quod at atque suscipit modi expedita culpa voluptatem assumenda!</div>
+            </li>
+            <li>
+                <div class="title">item 8</div>
+                <div class="content">Quae aperiam ad praesentium! Provident voluptatum minus architecto voluptas
+                    aperiam!</div>
+            </li>
+        </ul>
     </div>
-
-    <div class="hiden-element" id="feedback">
-        <form action="">
-            <input type="text" name="" id="">
-            <input type="text" name="" id="">
-            <button type="submit">Отправить</button>
-        </form>
-    </div>
-
-    <div class="hiden-element" id="video">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/lr2rc3FsrKU" title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen></iframe>
-    </div>
-
-    <!-- <div class="popup">
-        <div class="popup__modal">
-            <div class="popup__close">&#215;</div>
-            <div class="popup__content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati earum quasi
-                dolores soluta perspiciatis. Optio, magni assumenda reprehenderit, veritatis quas amet aspernatur
-                tempore aliquam perspiciatis aliquid dicta adipisci ex iure ipsa mollitia et voluptates at
-                necessitatibus. Similique reprehenderit error, incidunt nisi totam sint libero repudiandae maxime
-                dignissimos quod in autem?</div>
-        </div>
-    </div> -->
 </body>
 <script src="./script.js"></script>
 
