--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style/style.css">
 </head>
 
 <body>
-    <div class="root"></div>
+    <div id="root"></div>
 </body>
-<script src="./script.js"></script>
+<script type="module" src="./script/index.js"></script>
 
 </html>
